v2015.7.9
- Fix for duplicate episodes appearing

v2015.6.25
- Fix for quality selection

v2015.6.17
- Fix videos not scraping due to upstream changes

v2015.6.6
- Fixed Stream Quality Selection that was broken due to upstream changes 

v2015.5.27
- Stream Quality selection
- Stream are available from first list now

v2015.5.26
- Hard coded Video quality to 720 for the time being
- Fixed issues due to upstream changes
- Added addon description

v0.0.1
- Initial version

