@@ -48,9 +48,11 @@ def GET_EPISODES():
         print json
         title = HTMLParser.HTMLParser().unescape(HTMLParser.HTMLParser().unescape(json['title']))
         image = 'http:'+HTMLParser.HTMLParser().unescape(json['thumbnail_url'])
-        desc = json['description']
+        desc = HTMLParser.HTMLParser().unescape(json['description'])
+        end_desc = desc.find('<')
+        desc = desc[0:end_desc]
         video_id = json['video_id']
-        duration = json['duration']
+        duration = int(json['duration'])
         #http://cedexis-video.ora.tv/i/beergeeks/video-14630/,basic400,basic600,sd900,sd1200,sd1500,hd720,hd1080,mobile400,.mp4.csmil/master.m3u8
         stream = 'http://cedexis-video.ora.tv/i/beergeeks/video-'+str(video_id)+'/,basic400,basic600,sd900,sd1200,sd1500,hd720,hd1080,mobile400,.mp4.csmil/master.m3u8'        
         #GET_STREAM_QUALITIES(stream)
@@ -59,12 +61,11 @@ def GET_EPISODES():
 
         #addLink(title, stream, title, image, desc, duration)
         #name = HTMLParser.HTMLParser().unescape(name)
-
+        info = {'plot':desc,'tvshowtitle':'Beer Geeks','title':title,'originaltitle':title,'duration':duration}
         #name,url,mode,iconimage,fanart=None      
         if title not in episodes:
-            addDir(title,stream,100,image)
+            addDir(title,stream,100,image,info)
             episodes.append(title)
-
     
 
 def GET_STREAM_QUALITIES(m3u8_url,img_url):    
@@ -216,18 +217,21 @@ def addLink(name,url,title,iconimage,desc=None,duration=None):
     return ok
 
 
-def addDir(name,url,mode,iconimage,fanart=None):       
+def addDir(name,url,mode,iconimage,info,fanart=None):       
     ok=True
     u=sys.argv[0]+"?url="+urllib.quote_plus(url)+"&mode="+str(mode)+"&name="+urllib.quote_plus(name)
     u = u+"&img_url="+urllib.quote_plus(iconimage)            
-    liz=xbmcgui.ListItem(name, iconImage=ICON, thumbnailImage=iconimage)
-    liz.setInfo( type="Video", infoLabels={ "Title": name } )
+    liz=xbmcgui.ListItem(name, iconImage=ICON, thumbnailImage=iconimage)    
+    liz.setInfo( type="Video", infoLabels=info)    
     if fanart != None:
         liz.setProperty('fanart_image', fanart)
     else:
         liz.setProperty('fanart_image', FANART)
+
     ok=xbmcplugin.addDirectoryItem(handle=int(sys.argv[1]),url=u,listitem=liz,isFolder=True)    
+    xbmcplugin.setContent(int(sys.argv[1]), 'episodes')
     return ok
+
 
 def get_params():
     param=[]
