@@ -1,5 +1,6 @@
 v2015.7.9
 - Fix for duplicate episodes appearing
+- Added description and improved view
 
 v2015.6.25
 - Fix for quality selection
